--- a/pulp.Rmd
+++ b/pulp.Rmd
@@ -32,6 +32,7 @@ library(ggplot2)
 library(lme4)
 library(INLA)
 library(knitr)
+library(rstan, quietly=TRUE)
 ```
 
 # Data
@@ -409,6 +410,158 @@ ggplot(rdf,aes(x=x,y=y,group=operator, color=operator)) +
 We see that operators 1 and 2 tend to be lower than 3 and 4. There
 is substantial overlap so we would hesitate to declare any difference
 between a pair of operators.
+
+# STAN
+
+[STAN](https://mc-stan.org/) performs Bayesian inference using
+MCMC.
+
+Set up STAN to use multiple cores. Set the random number seed for reproducibility.
+
+```{r}
+rstan_options(auto_write = TRUE)
+options(mc.cores = parallel::detectCores())
+set.seed(123)
+```
+
+We need the STAN command file `pulp.stan`:
+
+```{r}
+writeLines(readLines("stancode/pulp.stan"))
+```
+
+We have used
+uninformative priors for the overall mean and the two variances.
+Prepare data in a format consistent with the command file. Needs to be
+a list. Can't use the word `operator` since this is reserved for
+system use in STAN.
+
+```{r}
+pulpdat <- list(N=nrow(pulp),
+                J=length(unique(pulp$operator)),
+                response=pulp$bright,
+                predictor=as.numeric(pulp$operator))
+```
+
+Break the fitting process into three steps:
+
+```{r pulpstancomp, cache=TRUE}
+rt <- stanc(file="stancode/pulp.stan")
+sm <- stan_model(stanc_ret = rt, verbose=FALSE)
+system.time(fit <- sampling(sm, data=pulpdat))
+```
+
+By default, we use 2000 iterations but repeated with independent
+starts 4 times giving 4 chains. We can thin but do not by default. The
+warmup period is half the number of observations (which is very
+conservative in this instance).
+
+We get warning messages about the fit. Since the default number
+of 2000 iterations runs in seconds, we can simply run a lot
+more iterations.
+
+```{r pulpstanbigiter, cache=TRUE}
+system.time(fit <- sampling(sm, data=pulpdat, iter=100000))
+```
+
+The same underlying problems remain but the inference will now
+be more reliable.
+
+# Diagnostics
+
+Diagnostics to check the convergence are worthwhile. We plot
+the sampled $\mu$ in the four chains, choosing only every 100th
+observation (the plot becomes very dense if we show everything). The warm-up period is excluded. 
+
+```{r pulpmudiag}
+pname <- "mu"
+muc <- rstan::extract(fit, pars=pname,  permuted=FALSE, inc_warmup=FALSE)
+mdf <- reshape2::melt(muc)
+mdf |> dplyr::filter(iterations %% 100 == 0) |> 
+ggplot(aes(x=iterations,y=value,color=chains)) + geom_line() + ylab(mdf$parameters[1])
+```
+
+We see the traces of the four chains overlaid in different colors. The chains appear roughly stationary although there are some occasional larger 
+excursions (which is why we needed more iterations).
+
+The similar plots can be produced for the two variance terms although note that STAN uses the standard deviations (which we also prefer). Here is the group (operator) SD:
+
+```{r pulpalphadiag}
+pname <- "sigmaalpha"
+muc <- rstan::extract(fit, pars=pname,  permuted=FALSE, inc_warmup=FALSE)
+mdf <- reshape2::melt(muc)
+mdf |> dplyr::filter(iterations %% 100 == 0) |> 
+  ggplot(aes(x=iterations,y=value,color=chains)) + 
+  geom_line() + ylab(mdf$parameters[1])
+```
+
+This looks acceptable. We expect that the distribution will be asymmetric so this is no concern. The chains stay away
+from zero (or close to it). Here's the same plot for the error SD.
+
+```{r pulpepsdiag}
+pname <- "sigmaepsilon"
+muc <- rstan::extract(fit, pars=pname,  permuted=FALSE, inc_warmup=FALSE)
+mdf <- reshape2::melt(muc)
+mdf |> dplyr::filter(iterations %% 100 == 0) |> 
+  ggplot(aes(x=iterations,y=value,color=chains)) + 
+  geom_line() + ylab(mdf$parameters[1])
+```
+
+Again this looks satisfactory.
+
+# Output summaries
+
+We consider only the parameters of immediate interest:
+
+```{r}
+print(fit, pars=c("mu","sigmaalpha","sigmaepsilon","a"))
+```
+
+We see the posterior mean, SE and SD of the samples. 
+We see some quantiles from which we could construct a 95% credible
+interval (for example). 
+The `n_eff` is a rough measure of the sample size taking into account 
+the correlation in the
+samples. The effective sample sizes for the mean and operator SD primary parameters is not large (considering the number of iterations) although adequate enough for most purposes. The Rhat statistic is known as the
+potential scale reduction factor. Values much greater than one indicate that additional samples would significantly improve
+the inference. In this case, the factors are all one so we feel no inclination to draw more samples.
+
+We can also get the posterior means alone.
+
+```{r}
+(get_posterior_mean(fit, pars=c("mu","sigmaalpha","sigmaepsilon","a")))
+```
+
+We see that we get this information for each chain as well as overall. This gives a sense of why running more
+than one chain might be helpful in assessing the uncertainty in the posterior inference.
+
+
+
+# Posterior Distributions
+
+We can use `extract` to get at various components of the STAN fit. We plot the posterior densities for the SDs:
+
+```{r pulppdae}
+postsig <- rstan::extract(fit, pars=c("sigmaalpha","sigmaepsilon"))
+ref <- reshape2::melt(postsig,value.name="bright")
+ggplot(ref,aes(x=bright, color=L1))+
+  geom_density()+
+  xlim(0,2) +
+  guides(color=guide_legend(title="SD"))
+```
+
+We see that the error SD can be localized much more than the operator SD.
+We can also look at the operator random effects:
+
+```{r pulpstanre}
+opre <- rstan::extract(fit, pars="a")
+ref <- reshape2::melt(opre, value.name="bright")
+ref[,2] <- (LETTERS[1:4])[ref[,2]]
+ggplot(data=ref,aes(x=bright, color=Var2))+geom_density()+guides(color=guide_legend(title="operator"))
+```
+
+We see that the four operator distributions overlap.
+
 
 
 
