--- a/pulp.Rmd
+++ b/pulp.Rmd
@@ -15,9 +15,15 @@ knitr::opts_chunk$set(comment=NA,
                       fig.ext = ".svg",
                       warning=FALSE, 
                       message=FALSE)
-ggplot2::theme_set(ggplot2::theme_bw())
-par(mgp=c(1.5,0.5,0), mar=c(3.1,3.1,0.1,0), pch=20)
+knitr::opts_knit$set(global.par = TRUE)
+
 ```
+
+```{r graphopts, include=FALSE}
+par(mgp=c(1.5,0.5,0), mar=c(3.1,3.1,0.1,0), pch=20)
+ggplot2::theme_set(ggplot2::theme_bw())
+```
+
 
 See the [introduction](index.md) for an overview. 
 
